--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
